# Forgum

./: .gitattributes  .gitignore  ADVANCED.md  CONTRIBUTING.md  Cargo.toml  Forgum.psd1  Forgum.psm1  LICENSE  NOTES.md  PR1_ENGINE_REFACTOR.md  PR2_PACKAGING.md  README.md  commit_msg.txt  commit_push.ps1  install.ps1  install.sh  kilo.json  raise_prs.ps1
.github/workflows/: ci.yml  release.yml
Private/: GetConfigPath.ps1  GetDaemonStatePath.ps1  GetEngineBinary.ps1
Private/Animation/: InvokeEngine.ps1
Public/: Stop-ForgumDaemon.ps1  forgum.ps1
Tests/: ConfigRoundTrip.Tests.ps1  DaemonPath.Tests.ps1  Forgum.PesterHelpers.psm1  ForgumForwarding.Tests.ps1  GetConfigPath.Tests.ps1  GetEngineBinary.Tests.ps1  InvokeEngine.Tests.ps1  StopDaemon.Tests.ps1
brain/: 00-EXECUTIVE-SUMMARY.md  00-README.md  01-BUGS-AND-ISSUES.md  02-CROSS-PLATFORM-STRATEGY.md  03-ANIMATION-ENGINE-ABOVE-PROMPT.md  04-PROMPT-INTEGRATION.md  05-TMUX-MULTIPLEXER-INTEGRATION.md  06-ARCHITECTURE.md  07-DEVELOPMENT-ROADMAP.md  08-TESTING-STRATEGY.md  09-MAKE-IT-COOLER.md  10-FINE-TUNED-MASTER-PLAN.md  11-ENGINE-INTERNALS-V2.md  12-PER-ANIMAL-ANIMATION-DESIGN.md  13-TEST-COVERAGE-MATRIX.md  14-AI-INTEGRATION-PLAN.md  15-INSTALLATION-AND-PACKAGING.md  16-CLI-DESIGN-SUBCOMMANDS-AND-ARGS.md  17-TUI-CONFIG-MENU.md  18-README-AND-WIKI-STRUCTURE.md  19-CONTRIBUTING-GUIDE.md
crates/engine/: Cargo.toml
crates/engine/benches/: engine_benches.rs
crates/engine/src/: battle.rs  cli.rs  color.rs  completions.rs  config.rs  config_tui.rs  control_socket.rs  cow.rs  daemon.rs  demo.rs  dna.rs  easing.rs  effects.rs  fortune.rs  framebuffer.rs  herd.rs  init.rs  lib.rs  main.rs  metrics.rs  particles.rs  protocol.rs  protocol_io.rs  remote.rs  render.rs  renderer.rs  say.rs  scheduler.rs  shader.rs  showcase.rs  status_line.rs  theme.rs  timer.rs  verlet.rs
crates/engine/tests/: cell_partial_eq.rs  cfg_containment.rs  cli_args.rs  cli_completeness.rs  cli_invariants.rs  completions.rs  cow_loading.rs  daemon_lifecycle.rs  daemon_soak.rs  daemon_state.rs  dna_completeness.rs  duration_zero.rs  golden_frame.rs  init_shell.rs  no_input_reads.rs  render_correctness.rs  renderer_effects.rs  sync_correctness.rs  visual_render.rs  windows_specific.rs
crates/platform/: Cargo.toml
crates/platform/src/: daemon_socket.rs  error.rs  font.rs  guards.rs  lib.rs  mux.rs  output.rs  paths.rs  platform_unix.rs  platform_windows.rs  protocol.rs  shell.rs  signal.rs  sixel.rs  spawn.rs  terminal.rs
crates/platform/tests/: guards_drop_on_panic.rs  open_output.rs  paths_extra.rs  signal_handling.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  lib.rs
data/: animations.json
data/Cows/: animations.json  default.cow
data/Fortunes/: fortunes.txt
docs/: TALES.md
docs/samples/: README.md  config.minimal.json  config.rainbow.json  config.solid.json
docs/superpowers/plans/: 2026-06-29-daemon-lifecycle-test.md  2026-06-29-phase1-daemon-overlay.md  2026-06-29-phase4-render-pipeline.md  2026-06-29-phase5-tmux-mvp.md  2026-06-29-phase6-herder.md
docs/superpowers/specs/: 2026-06-28-phase0-stop-the-bleeding-design.md  2026-06-28-phase1-overlay-design.md  2026-06-28-phase2-shell-hooks-design.md  2026-06-28-phase3-effects-design.md  2026-06-29-phase4-render-pipeline-design.md  2026-06-29-phase5-tmux-mvp-design.md  2026-06-29-phase6-herder-design.md  2026-06-29-phase7-demo-design.md
packaging/choco/: forgum.nuspec
packaging/choco/tools/: chocolateyinstall.ps1
packaging/deb/: build-deb.sh
packaging/deb/DEBIAN/: control  postinst
packaging/gentoo/: forgum-0.4.0.ebuild  metadata.xml
packaging/homebrew/: forgum.rb
packaging/nix/: README.md  flake.nix  module.nix  package.nix
packaging/pacman/: PKGBUILD  build-pacman.sh
packaging/rpm/: build-rpm.sh  forgum.spec
packaging/scoop/: forgum.json
packaging/windows/: README.md  forgum.wxs
packaging/winget/: HKDEVS.Forgum.yaml  HKDevLoops.Forgum.yaml
workflows/: commit-push.md
