[package]
name = "forgum-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cross-platform abstraction layer for the Forgum engine: terminal handles, signal guards, raw mode/alt screen/cursor RAII, output redirection, config paths, detached spawning. All #[cfg] in the Forgum workspace lives in this crate."
repository.workspace = true
readme = "../../README.md"
keywords = ["terminal", "tty", "pty", "console", "forgum"]
categories = ["api-bindings", "command-line-interface", "os"]

[lints]
workspace = true

[dependencies]
crossterm = "0.28"
signal-hook-registry = { version = "1.4", default-features = false }
thiserror = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["fs", "term", "signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3"

[features]
# Optional Sixel/Kitty terminal-graphics backend (D4/T4). OFF by default so the
# default build stays lean and never pulls graphics code into the engine. All
# platform/graphics `#[cfg]` lives here — never in `crates/engine/src`.
sixel = []