[package]
name = "forgum-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Interactive ratatui/crossterm config editor for Forgum's SceneConfig."
repository.workspace = true
readme = "../../README.md"
keywords = ["forgum", "tui", "config", "terminal", "ratatui"]
categories = ["command-line-interface", "config"]

[dependencies]
forgum-platform = { path = "../platform" }
ratatui = "0.29"
crossterm = "0.28"
serde_json = "1"
anyhow = "1"

[lints]
workspace = true
